changed text & button colors

--- a/index.html
+++ b/index.html
@@ -52,9 +52,7 @@
             <!-- end grid  -->
             <br><br><br>
             <!-- reset game -->
-            <button id="but" onclick="myfunc_2()">
-                RESET
-            </button>
+            <button id="but" onclick="myfunc_2()">RESET</button>
       
             <br><br>
             <!-- show player turn -->
