added sound effects

--- a/index.html
+++ b/index.html
@@ -57,8 +57,23 @@
             <br><br>
             <!-- show player turn -->
             <p id="print"></p>
-      
         </div>
+    </div>
+<!--Set up audio-->
+<div id="sound-effects">
+    <audio id="turn">
+        <source src="./assets/sounds/ding.mp3" />
+    </audio>
+    <audio id="cheer">
+        <source src="./assets/sounds/cheer.mp3" />
+    </audio>
+</audio>
+<audio id="end-sound">
+    <source src="./assets/sounds/done.mp3" />
+</audio>
+
+</div>
+
     </body>
      <script src="./assets/js/script.js"></script> 
     </html>
